# clang-format-inc

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
changelog/: index.html
clang_format_inc/: __init__.py  __main__.py  clang_format_diff.py  diff_parser.py  formatter.py  main.py
cli/: index.html
docs/: changelog.md  cli.md  how-it-works.md  index.md  installation.md
docs/usage/: check-diff.md  ci.md  filtering.md  local.md  parallel.md  quickstart.md
how-it-works/: index.html
installation/: index.html
search/: search_index.json
tests/: conftest.py  test_diff_parser.py  test_formatter.py  test_main.py
usage/check-diff/: index.html
usage/ci/: index.html
usage/filtering/: index.html
usage/local/: index.html
usage/parallel/: index.html
usage/quickstart/: index.html
