[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clang-format-inc"
version = "0.1.0"
description = "Incrementally format only changed C/C++ lines with clang-format — works in both local and CI pre-commit contexts"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nishant Goyal"},
]
keywords = ["clang-format", "pre-commit", "c++", "formatter", "incremental"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
clang-format-inc = "clang_format_inc.main:main"

[project.urls]
Homepage = "https://github.com/nishant-goyal/clang-format-inc"
Repository = "https://github.com/nishant-goyal/clang-format-inc"
Issues = "https://github.com/nishant-goyal/clang-format-inc/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["clang_format_inc*"]

[tool.setuptools.package-data]
clang_format_inc = ["clang_format_diff.py"]
