[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clang-format-inc"
version = "0.1.0"
description = "Incrementally format only changed C/C++ lines with clang-format — works in both local and CI pre-commit contexts"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Aditya Goyal", email = "goyaladitya05@users.noreply.github.com"},
]
keywords = ["clang-format", "pre-commit", "c++", "formatter", "incremental", "linter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
clang-format-inc = "clang_format_inc.main:main"

[project.urls]
Homepage = "https://github.com/goyaladitya05/clang-format-inc"
Repository = "https://github.com/goyaladitya05/clang-format-inc"
Issues = "https://github.com/goyaladitya05/clang-format-inc/issues"
Changelog = "https://github.com/goyaladitya05/clang-format-inc/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# setuptools
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["."]
include = ["clang_format_inc*"]

[tool.setuptools.package-data]
clang_format_inc = ["clang_format_diff.py", "py.typed"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["clang_format_inc"]
# clang_format_diff.py is bundled from LLVM and not ours to cover
omit = ["clang_format_inc/clang_format_diff.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py38"
line-length = 120
# clang_format_diff.py is vendored from LLVM — do not lint it
exclude = ["clang_format_inc/clang_format_diff.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "UP007",  # Use X | Y for union types — requires Python 3.10+, we use __future__
]

[tool.ruff.lint.isort]
known-first-party = ["clang_format_inc"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# clang_format_diff.py is bundled from LLVM — don't type-check it
exclude = ["clang_format_inc/clang_format_diff\\.py"]
